<resources>
    <string name="please_wait">Please wait</string>
    <string name="getting_info_from_server">Receiving information from the server...</string>
    <string name="server_cannot_reached">Server cannot reached.</string>
    <string name="retry">Retry</string>
    <string name="error">Error</string>
    <string name="details">Details</string>
    <string name="rials">Rials</string>
    <string name="view_receipt">View receipt</string>
    <string name="transactions_count">Transactions count</string>
    <string name="total_payment_amount">Total Payment amount</string>
    <string name="you_have_not_paid_yet">You have not paid yet.\n If you have just paid the bill, it may take a while to be added to your history.</string>
    <string name="nothing_to_show">Nothing to show.</string>
    <string name="bill_name">Bill name</string>
    <string name="name_to_save">Name to save</string>
    <string name="remove">Remove</string>
    <string name="save">Save</string>
    <string name="please_check_your_internet_connection_try_again">Please check your Internet connection and try again.</string>
    <string name="share_via">Share via:</string>
    <string name="saved_to_clipboared">Saved to Clipboard</string>
    <string name="bill_id">Bill ID</string>
    <string name="payment_id">Payment ID</string>
    <string name="chosen_name_should_not_be_empty">Chosen name should not be empty</string>
    <string name="followup_from_the_bank">Follow up</string>
    <string name="custom_unit">%d Rials</string>
    <string name="custom_error_message">Connection timeout. Please try again.</string>


    <!--Post Tracking Result -->
    <string name="post_inquiry_btn">Postal inquiry</string>
    <string name="tv_post_package_number">post package number</string>
    <string name="tv_service_type">service type</string>
    <string name="tv_weight">weight</string>
    <string name="tv_insurance_amount">insurance amount</string>
    <string name="tv_post_price">post price</string>
    <string name="tv_acceptance_date_time">acceptance date time</string>
    <string name="tv_post_tracking_status">last tracking status</string>
    <string name="tv_receiver_info">receiver info</string>
    <string name="tv_receiver_name">receiver name</string>
    <string name="tv_receiver_postal_code">receiver postal code</string>
    <string name="tv_destination">destination</string>
    <string name="tv_sender_info">sender info</string>
    <string name="tv_sender_name">sender name</string>
    <string name="tv_sender_postal_code">sender postal code</string>
    <string name="tv_origin">origin</string>
    <string name="tv_post_office_origin">origin post office</string>
    <string name="tv_post_package_tracking_detail">post package tracking detail</string>
    <string name="tv_date_time">date time</string>
    <string name="tv_place">place</string>
    <string name="et_postal_code_hint">postal code</string>
    <string name="tv_post_inquiry_title">To inquire about your postal status for free, enter its postal barcode.</string>


    <string name="rating_bottom_sheet_message">Please rate app for supporting us and help to improve.</string>
    <string name="rate">rate</string>
    <string name="later">later</string>
    <string name="thanks_for_your_feedback">Thanks for your feedback.</string>

    <string name="login_via_phone_number">Login via phone number</string>
    <string name="skip_and_enter_app">Skip and enter</string>
    <string name="optional_login_description">Login via phone number to save your data and history</string>

    <string name="enter_phone_number_to_login">Enter phone number to Login</string>
    <string name="edit_phone_number">Edit phone number</string>
    <string name="send_otp_code">Send code</string>
    <string name="enter_otp_code">Enter code that sent to %s</string>
    <string name="confirm">Confirm</string>
    <string name="resend_otp_code">Resend code %s</string>
</resources>
