<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BottomSheetOptionalLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/messageTv"
        style="@style/BottomSheetOptionalLogin.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/optional_login_description"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/messageTv">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            style="@style/BottomSheetOptionalLogin.LoginButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/login_via_phone_number" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/enterBtn"
            style="@style/BottomSheetOptionalLogin.EnterButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/skip_and_enter_app" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>