<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BottomSheetPostInquiry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/ayanMainPadding">

    <TextView
        android:id="@+id/headerTv"
        style="@style/BottomSheetPostInquiry.TextView.Header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/tv_post_inquiry_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/postalCodeET"
        style="@style/BottomSheetPostInquiry.PostalCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ayanMainPadding"
        android:hint="@string/et_postal_code_hint"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerTv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_post_inquiry"
        style="@style/BottomSheetPostInquiry.PostInquiry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ayanMainPadding"
        android:enabled="false"
        android:text="@string/post_inquiry_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postalCodeET" />

</androidx.constraintlayout.widget.ConstraintLayout>