<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/ayanRclPadding"
    android:paddingTop="@dimen/ayanRclPadding"
    android:paddingEnd="@dimen/ayanRclPadding">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/closeIv"
        android:layout_width="@dimen/ayanTopIconSize"
        android:layout_height="@dimen/ayanTopIconSize"
        android:layout_gravity="start"
        android:tint="@color/ayanTextColor"
        app:srcCompat="@drawable/ic_close" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/productIv"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="@dimen/main_padding" />

    <TextView
        android:id="@+id/valueTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ayanCardPadding"
        android:gravity="center"
        android:textColor="@color/ayanTextColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/ayanRclPadding"
        android:text="@string/bill_name"
        android:textColor="@color/ayanTextColor" />

    <EditText
        android:id="@+id/saveNameEt"
        style="@style/AyanAppEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ayanCardPadding"
        android:hint="@string/name_to_save" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ayanRclPadding"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveBtn"
            style="@style/AyanGreenAppButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/ayanButton"
            android:layout_marginBottom="@dimen/ayanRclPadding"
            android:layout_weight="3"
            android:text="@string/save" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/removeBtn"
            style="@style/AyanRedAppButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/ayanButton"
            android:layout_marginStart="@dimen/ayanRclPadding"
            android:layout_marginBottom="@dimen/ayanRclPadding"
            android:layout_weight="2"
            android:text="@string/remove" />

    </LinearLayout>
</LinearLayout>