<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/request_activation_container"
    style="@style/FragmentLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/productIv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_lisence_status"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/phoneNumberLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/productIv">

            <TextView
                style="@style/FragmentLogin.TextView.EnterPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/enter_phone_number_to_login"
                android:textColor="@color/ayanTextColor" />

            <EditText
                android:id="@+id/phoneNumberEt"
                style="@style/FragmentLogin.EditText.PhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:hint="09123456789"
                android:inputType="phone"
                android:letterSpacing="0.5"
                android:maxLength="11"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sendOtpBtn"
                style="@style/FragmentLogin.Button.SendOtp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:enabled="false"
                android:text="@string/send_otp_code" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/editPhoneNumberTv"
            style="@style/FragmentLogin.TextView.EditPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="8dp"
            android:gravity="start|center_vertical"
            android:text="@string/edit_phone_number"
            android:textAlignment="viewStart"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_edit"
            app:layout_constraintStart_toStartOf="@id/phoneNumberLl"
            app:layout_constraintTop_toBottomOf="@id/phoneNumberLl"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/otpLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/editPhoneNumberTv"
            tools:visibility="visible">

            <TextView
                android:id="@+id/sentCodeDescription"
                style="@style/FragmentLogin.TextView.EnterOtpCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enter_otp_code"
                android:textColor="@color/ayanTextColor" />

            <EditText
                android:id="@+id/otpCodeEt"
                style="@style/FragmentLogin.EditText.OtpCode"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:hint="_ _ _ _"
                android:inputType="phone"
                android:letterSpacing="1"
                android:maxLength="4"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirmOtpBtn"
                style="@style/FragmentLogin.Button.ConfirmOtp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:enabled="false"
                android:text="@string/confirm" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/resendOtpTv"
            style="@style/FragmentLogin.TextView.ResendOtpCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="8dp"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/resend_otp_code"
            android:textAlignment="center"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_refresh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otpLl"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>