<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ayanColorLightGray">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ayanColorPrimary"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/ayanColorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <LinearLayout
                android:id="@+id/summaryLl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/ayanTopIconSize"
                android:paddingBottom="@dimen/ayanTopIconSize"
                app:layout_collapseMode="parallax">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/totalBillsCountTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_x_large"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/ayanRclPadding"
                        android:gravity="center"
                        android:text="@string/transactions_count"
                        android:textColor="@color/white" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/ayanCardPadding"
                        android:paddingEnd="@dimen/ayanCardPadding">

                        <TextView
                            android:id="@+id/totalAmountTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/ayanCardPadding"
                            android:gravity="center"
                            android:text="0"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_x_large"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/rialTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rials"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/ayanRclPadding"
                        android:gravity="center"
                        android:text="@string/total_payment_amount"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ir.alirezabdn.wp7progress.WP10ProgressBar
                android:id="@+id/inquiryHistoryWp10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/ayanMainPadding"
                app:indicatorColor="@color/ayanTextColor"
                app:indicatorRadius="7" />

            <LinearLayout
                android:id="@+id/noItemTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/ayanMainPadding"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/ayanMainPadding"
                    android:text="@string/nothing_to_show"
                    android:textColor="@color/ayanTextColor"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historyRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingTop="@dimen/ayanMainPadding"
                android:paddingBottom="@dimen/ayanMainPadding" />

            <TextView
                android:id="@+id/noHistoryTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ayanMainPadding"
                android:layout_marginTop="@dimen/ayanToolbarHeight"
                android:layout_marginEnd="@dimen/ayanMainPadding"
                android:gravity="center"
                android:text="@string/you_have_not_paid_yet"
                android:textColor="@color/ayanGreyTextColor"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>