<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FragmentAyanHistoryDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/topLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/main_padding"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/productIv"
                style="@style/FragmentAyanHistoryDetail.ProductIv"
                android:layout_width="@dimen/ayanButton"
                android:layout_height="@dimen/ayanButton"
                android:layout_marginEnd="@dimen/main_padding"
                tools:src="@drawable/ic_gasbill" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/main_padding"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleTv"
                    style="@style/FragmentAyanHistoryDetail.TextView.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:singleLine="true"
                    android:textSize="@dimen/text_x_large"
                    android:textStyle="bold"
                    tools:text="تیتر" />

                <TextView
                    android:id="@+id/dateTimeTv"
                    style="@style/FragmentAyanHistoryDetail.TextView.DateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    tools:text="تاریخ" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/amountTv"
                    style="@style/FragmentAyanHistoryDetail.TextView.Amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/ayanCardPadding"
                    android:textSize="@dimen/text_x_large"
                    android:textStyle="bold" />

                <TextView
                    style="@style/FragmentAyanHistoryDetail.TextView.Rials"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rials" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/descriptionTv"
            style="@style/FragmentAyanHistoryDetail.TextView.Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/main_padding"
            app:layout_constraintTop_toBottomOf="@+id/topLl"
            tools:text="توضیحات" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/detailsRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ayanLineHeight"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingBottom="@dimen/main_padding"
            app:layout_constrainedHeight="true"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTv"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/actionsLl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ayanButton"
            android:orientation="horizontal"
            android:paddingTop="@dimen/ayanLineHeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailsRv">

            <LinearLayout
                android:id="@+id/printLl"
                style="@style/FragmentAyanHistoryDetail.Print"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv1"
                    style="@style/FragmentAyanHistoryDetail.TextView.Print"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:text="@string/view_receipt"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv1"
                    style="@style/FragmentAyanHistoryDetail.PrintIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/ayanCardPadding"
                    android:tint="@color/ayanColorAccent"
                    app:srcCompat="@drawable/ic_baseline_save_alt_24" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/followUpLl"
                style="@style/FragmentAyanHistoryDetail.FollowUp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/ayanLineHeight"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tv2"
                    style="@style/FragmentAyanHistoryDetail.TextView.FollowUp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:text="@string/followup_from_the_bank"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv2"
                    style="@style/FragmentAyanHistoryDetail.FollowUpIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/ayanCardPadding"
                    app:srcCompat="@drawable/ic_outline_account_balance_24" />
            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_post_inquiry"
            style="@style/FragmentAyanHistoryDetail.PostInquiryButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="@dimen/ayanMainPadding"
            android:layout_marginTop="16dp"
            android:text="@string/post_inquiry_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actionsLl" />


        <!--<androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/ayanButton" />-->

        <RelativeLayout
            android:id="@+id/bannerRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>